<resources>
    <string name="app_name">Quiz Biblijny</string>

    <string name="imgButtonPol"></string>
    <string name="imgButtonEng"></string>
    <string name="textViewTitle">Teleturniej biblijny</string>
    <string name="buttonStartK">Kalambury</string>
    <string name="buttonStartQ">Quiz</string>
    <string name="buttonRules">Zasady</string>
    <string name="buttonPremium">Premium</string>
    <string name="buttonExit">Wyjście</string>

    <string name="buttonSettings">Ustawienia</string>
    <string name="textViewPoints">Zdobyte punkty: </string>
    <string name="textViewShowPoints">0/15</string>
    <string name="textViewQuestion">Pytanie</string>
    <string name="radioButtonA">A</string>
    <string name="radioButtonB">B</string>
    <string name="radioButtonC">C</string>
    <string name="showDescription">Pokaż źródło</string>
    <string name="buttonCorrectAnswer">Pokaż poprawną odpowiedź</string>
    <string name="buttonCheckAnwser">Sprawdź odpowiedź</string>
    <string name="buttonNextQuestion">Następne pytanie</string>
    <string name="buttonResult">Wyniki</string>

    <string name="textViewRulesK">Celem zabawy jest odgadywanie haseł. W każdej kolejce poszczególna drużyna odgaduje hasło lub hasła, przedstawiane przez jednego członka grupy. Z tego powodu często wymaga się, aby drużyna składała się z co najmniej 3 osób. W poszczególnych etapach zabawy hasła przedstawiane są gestami (pantomima) lub rysunkami (elementy rebusu). Zarówno podczas pokazywania, jak i rysowania, nie wolno używać słów, ani wydawać innych dźwięków.</string>
    <string name="textViewRulesQ">Quiz to forma rozrywki intelektualnej polegająca na sprawdzaniu posiadanych wiadomości z różnych dziedzin, np. kino, sport, geografia, muzyka, media itp. Swoją formą przypomina popularne teleturnieje, takie jak “Milionerzy” czy “Jeden z dziesięciu”, których głównym założeniem jest odpowiadanie na pytania przez uczestników gry z tą różnicą, że udział w nim może wziąć każdy, bez wstępnych eliminacji. ZAWSZE poprawna może być tylko jedna z trzech odpowiedzi!</string>
    <string name="buttonBack">Powrót do strony głównej</string>

    <string name="FootNotes_Title">Tytuł</string>
    <string name="FootNotes_Description">Opis</string>
    <string name="FootNotes_FootNote">Przypis</string>

    <string name="buttonBackKalambury">Powrót do kalamburów</string>
</resources>
