<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/quiz"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_weight=".10"
        android:text="@string/textViewQuestion"
        android:textColor="#000000"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".67">

        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonA"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonB"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonC"
            android:textColor="#000000" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".10"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonShowDescription"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="#3F51B5"
            android:text="@string/showDescription" />

        <Button
            android:id="@+id/buttonCorrectAnwser"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="#3F51B5"
            android:text="@string/buttonCorrectAnswer" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCheckAnwser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".10"
        android:layout_margin="5dp"
        android:background="#03A9F4"
        android:text="@string/buttonCheckAnwser" />

    <Button
        android:id="@+id/buttonKalamburyBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".10"
        android:layout_margin="5dp"
        android:background="#03A9F4"
        android:text="@string/buttonBackKalambury"
        android:visibility="gone" />

</LinearLayout>