<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="@drawable/source"
    tools:context=".FootNotes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/FootNotes_Title"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/FootNotes_Description"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/FootNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/FootNotes_FootNote"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonFootBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/buttonBack" />

</RelativeLayout>