<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/kalambury"
    tools:context=".KalamburyActivity">

    <TextView
        android:id="@+id/textViewPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toStartOf="@id/textViewShowPoints"
        android:layout_toLeftOf="@id/textViewShowPoints"
        android:text="@string/textViewPoints"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewShowPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/textViewShowPoints"
        android:textColor="#000000" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:textColor="#423B00"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/buttonBack" />

    <Button
        android:id="@+id/buttonSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/buttonBack"
        android:layout_toRightOf="@id/buttonBack"
        android:background="#B4E877"
        android:padding="5dp"
        android:text="@string/showDescription" />

    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/YesNo"
        android:layout_margin="5dp"
        android:background="#2196F3"
        android:text="Zobacz w Quizie" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSource"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewQuestion"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/YesNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonCorrect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight=".50"
            android:background="#4FE155"
            android:text="Udało się zgadnąć! :)" />

        <Button
            android:id="@+id/buttonUncorrect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight=".50"
            android:background="#DA463C"
            android:text="Nie udało się zgadnąć! :(" />

    </LinearLayout>

</RelativeLayout>